# ill_of_the_world

./: Cargo.toml  build.rs  tracking.txt
assets/model/: minion.mtl  pyramid.mtl  pyramid1.mtl
assets/ui/: ui.xcf
plan/: blocks.txt  what.txt
src/: main.rs
src/client/: draw.rs  mod.rs  state.rs
src/graphics/: camera.rs  instance.rs  light.rs  light.wgsl  mod.rs  model.rs  pipeline.rs  resources.rs  state.rs  texture.rs  ui.wgsl
src/graphics/m_3d/: mod.rs  model.rs  shader.wgsl  vertex.rs
src/graphics/model/: mod.rs  vertex.rs
src/graphics/ui/: buttons.rs  component.rs  mod.rs  model.rs  vertex.rs
src/server/: connection.rs  mod.rs  network.rs  networking.rs  probably-wont-use.txt  state.rs
src/util/: thread.rs
src/world/: generation.rs  mod.rs  position.rs  update.rs
src/world/block/: mod.rs
