[package]
name = "ill_of_the_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.17.0"
pollster = "0.3.0"
bytemuck = { version = "1.12.1", features = [ "derive" ] }
image = { version = "0.24.3", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0.65"
cgmath = "0.18.0"
tobj = { version = "4.0.0", features = ["async"] }
instant = "0.1.12"

[build-dependencies]
anyhow = "1.0.65"
fs_extra = "1.2.0"
glob = "0.3.0"